# balanced-learned-sort

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_synth_dup.sh
data/: downsample.py  fb_clean.py
data/Chic/: download.sh
data/NYC/: download.sh
data/Sof/: download.sh
data/Stks/: download.sh
include/: bls.h
include/bls/: bls.h
include/bls/indexes/: linear.h  linear_balanced.h  new_rmi.h
include/indexes/: linear.h  linear_balanced.h  my_rmi.h
scripts/: clean_data.sh  download.sh  run_grid.sh  run_reals.sh  run_synth.sh
src/: distr.h  example.cpp  sort_grid.cpp  sort_real.cpp  sort_synth.cpp  utils.h
